@@ -17,7 +17,7 @@ files. It is Free Software (&lsquo;open source&rsquo;).
       notation</a>, or look at our <a href="pubs.html">publications</a>.
 
   <li>LilyPond was written, conceived and directed by the
-    <a href="@DOC@v1.8/Documentation/topdocs/out-www/AUTHORS.html">authors</a>.
+    <a href="@DOC@v2.2/Documentation/topdocs/out-www/AUTHORS.html">authors</a>.
     Helping hands are listed in the <a href="thanks.html">Acknowledgements</a>
 </ul>
 
@@ -68,7 +68,7 @@ files. It is Free Software (&lsquo;open source&rsquo;).
 
   <li>
     For contacting the authors, see
-    <a href="@DOC@v1.8/Documentation/topdocs/out-www/AUTHORS.html">the
+    <a href="@DOC@v2.2/Documentation/topdocs/out-www/AUTHORS.html">the
       author list</a>.
     (<em>Only contact the authors directly for strictly personal
       communication</em>)
