@@ -38,7 +38,7 @@ The repository does not contain generated files.  To create <code>configure</cod
 
 
 Instructions for compiling are in the <a
-href="@DOC@v1.8/Documentation/topdocs/out-www/INSTALL.html">INSTALL</a> instructions.
+href="@DOC@v2.2/Documentation/topdocs/out-www/INSTALL.html">INSTALL</a> instructions.
 <p>
 
 
