@@ -14,7 +14,7 @@
 	
 	<dt>March 28, 2004</dt>
 	<dd>
-	  LilyPond 2.1.35 fixes a slew of
+	  LilyPond 2.1..35 fixes a slew of
 	  bugs, and has the <tt>raggedlast</tt> option, which causes
 	  paragraph like line breaking for scores. More info in the
 	  <a href="@DOC@/v2.1/Documentation/topdocs/out-www/NEWS.html">release
